# tesseract

./: .gitignore  .pre-commit-config.yaml  .shield.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: check-doc-drift.py  doc-drift-map.yaml  test_check_doc_drift.py
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  shield-firewall.sh
.github/workflows/: eval-backlog.yml  eval-lld.yml  eval-plan-trd.yml  release-notify.yml  release.yml  test.yml
clickup-sprint-planner/: .mcp.json  README.md  pyproject.toml
clickup-sprint-planner/.claude-plugin/: plugin.json
clickup-sprint-planner/commands/: sprint-plan.md  sprint-status.md  sprint-sync.md
clickup-sprint-planner/docs/: future-sprint-retro-and-report.md
clickup-sprint-planner/examples/: sprint-planner.example.json
clickup-sprint-planner/server/: clickup_client.py  config.py  main.py
clickup-sprint-planner/server/tools/: bulk_create.py  bulk_update.py  relationships.py  rename.py  sprint_status.py  sync.py
clickup-sprint-planner/skills/: EVALUATION.md
clickup-sprint-planner/skills/sprint-planning/: SKILL.md  card-format.md
dev-workflow/: README.md
dev-workflow/.claude-plugin/: plugin.json
dev-workflow/agents/: agile-coach-reviewer.md  cloud-architect-reviewer.md  cost-finops-reviewer.md  dx-engineer-reviewer.md  security-engineer-reviewer.md
dev-workflow/commands/: plan-review.md
docs/adr/: 0001-introduce-prd-layer.html  0001-introduce-prd-layer.md  0002-reduce-skill-change-amplification.md
docs/lld/: backlog-store.md  backlog.md  clickup.md  confluence.md  epic-suggester.md  jira.md  notion.md  parsers.md  reconciler.md  sast.md
docs/shield/: backlog.json  index.html  manifest.js  manifest.json
github-sprint-planner/: .gitignore  .mcp.json  README.md  pyproject.toml
github-sprint-planner/.claude-plugin/: plugin.json
github-sprint-planner/commands/: sprint-plan.md  sprint-status.md  sprint-sync.md
github-sprint-planner/examples/: sprint-planner.example.json
github-sprint-planner/server/: action_log.py  config.py  main.py
github-sprint-planner/server/tools/: action_log_tool.py  bulk_create.py  bulk_rename.py  bulk_update.py  sprint_status.py  sync.py
github-sprint-planner/skills/sprint-planning/: SKILL.md  card-format.md
infra-review/: README.md
infra-review/.claude-plugin/: plugin.json
infra-review/agents/: architecture-reviewer.md  cost-reviewer.md  operations-reviewer.md  security-reviewer.md  well-architected-reviewer.md
infra-review/commands/: analyze-plan.md  review-cicd.md  review-component.md  review-cost.md  review-hygiene.md  review-security.md  review-well-architected.md
infra-review/hooks/: hooks.json  post-tf-edit.sh  session-start.sh
infra-review/scripts/: detect-atmos-repo.sh
infra-review/skills/: EVALUATION.md
shield/: .mcp.json  CHANGELOG.md  README.md
shield/.claude-plugin/: plugin.json
shield/adapters/_common/: pyproject.toml
shield/adapters/_common/shield_adapters_common/: __init__.py  design_refs.py
shield/adapters/_common/tests/: test_design_refs.py
shield/adapters/clickup/: pyproject.toml
shield/adapters/clickup/server/: action_log.py  config.py  main.py  naming.py
shield/adapters/clickup/server/parsers/: base.py  html_parser.py  markdown_parser.py
shield/adapters/clickup/server/tools/: _helpers.py  action_log_tool.py  backfill.py  bulk_create.py  bulk_update.py  capabilities.py  forward_design_refs.py  relationships.py  rename.py  sprint_status.py  status.py  sync.py
shield/adapters/clickup/tests/: conftest.py  test_backfill.py  test_bulk_create.py  test_config_naming.py  test_contract.py  test_forward_design_refs.py  test_naming.py  test_rename_sidecar.py  test_status_sidecar.py  test_sync_sidecar.py
shield/adapters/clickup/tests/fixtures/: plan-v14-2epics-3stories.json
shield/adapters/github/: .mcp.json  CLAUDE.md  README.md  pyproject.toml
shield/adapters/github/server/: config.py  github_client.py  main.py
shield/adapters/github/server/parsers/: base.py  html_parser.py  markdown_parser.py
shield/adapters/github/server/tools/: _helpers.py  bulk_create.py  bulk_update.py  capabilities.py  relationships.py  rename.py  status.py  sync.py
shield/adapters/github/tests/: conftest.py  test_contract.py
shield/adapters/jira/: .mcp.json  pyproject.toml
shield/adapters/jira/server/: main.py
shield/adapters/jira/server/tools/: sync.py
shield/adapters/jira/tests/: conftest.py  test_contract.py  test_idempotency.py
shield/adapters/sast/: GETTING-STARTED.md  README.md  common.py  finding-schema.md  pyproject.toml  severity-mapping.md
shield/adapters/sast/semgrep/: adapter.md  adapter.py
shield/adapters/sast/semgrep/rules/: spring-config.yml  spring-data.yml  spring-security.yml  spring-web.yml
shield/adapters/sast/semgrep/tests/: conftest.py  test_adapter.py
shield/adapters/sast/semgrep/tests/fixtures/: empty-output.json  spring-boot-api-output.json
shield/adapters/sast/sonarqube/: adapter.md  adapter.py
shield/adapters/sast/sonarqube/examples/: sonar-project.properties
shield/adapters/sast/sonarqube/tests/: conftest.py  test_adapter.py
shield/adapters/sast/sonarqube/tests/fixtures/: empty-issues.json  sample-issues.json
shield/adapters/sast/tests/: test_common.py
shield/agents/: adoption-rollout-risk.md  agile-coach-reviewer.md  agile-coach.md  architect.md  architecture-reviewer.md  backend-engineer.md  backend-reviewer.md  business-value-alignment.md  sre.md  (+24 more)
shield/backlog/: pyproject.toml
shield/backlog/shield_backlog/: __init__.py  reconciler.py  store.py  suggester.py  triggers.py  view.py
shield/backlog/tests/: conftest.py  test_reconciler.py  test_store.py  test_suggester.py  test_triggers.py  test_view.py
shield/parsers/: pyproject.toml
shield/parsers/shield_parsers/: __init__.py  sidecar.py
shield/parsers/tests/: conftest.py  test_sidecar.py
shield/parsers/tests/fixtures/: plan-invalid-missing-stories.json  plan-v11-no-pm-ids.json  plan-v14-minimal.json  plan-v20-too-new.json
(+697 files in other folders)
