[project]
name = "clickup-sprint-planner"
version = "1.3.0"
description = "MCP server for ClickUp sprint planning — bulk ops, relationships, plan doc sync"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
