[project]
name = "shield-backlog"
version = "0.1.0"
description = "Shield backlog — capture, view, promote, and reconcile entries against feature/epic state."
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shield_backlog"]
