[project]
name = "shield-parsers"
version = "0.1.0"
description = "Canonical typed reader/writer for Shield artifact files (plan.json sidecar, future TRD section parser, etc.)"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3", "pytest-cov>=5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shield_parsers"]
