[project]
name = "shield-clickup-adapter"
version = "2.1.0"
description = "ClickUp PM adapter for Shield — implements the pm_* tool interface for sprint planning operations"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "shield-adapters-common",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3", "jsonschema>=4.0", "respx>=0.21"]

[tool.uv.sources]
shield-adapters-common = { path = "../_common", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
