[project]
name = "shield-github-adapter"
version = "1.0.0"
description = "GitHub PM adapter for Shield — implements the pm_* tool interface for GitHub Issues + Projects v2"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "jsonschema>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
