[project]
name = "shield-jira-adapter"
version = "0.1.0"
description = "Jira PM adapter for Shield — forwards design_refs[] as remote_issue_link entries with idempotent upsert"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12",
    "requests>=2.32",
    "shield-adapters-common",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3", "responses>=0.25"]

[tool.uv.sources]
shield-adapters-common = { path = "../_common", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
