[project]
name = "shield-sast-adapters"
version = "0.1.0"
description = "SAST adapter framework for shield's backend-reviewer — Semgrep, SonarQube, etc."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0", "pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semgrep", "sonarqube", "common.py"]

[tool.pytest.ini_options]
testpaths = ["tests", "semgrep/tests", "sonarqube/tests"]
pythonpath = ["../../.."]
markers = [
    "integration: tool-installed end-to-end tests (deselect with '-m \"not integration\"')",
]
